--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,7 +1,7 @@
-config.folder=${file.reference.PP-tracker-config}
+config.folder=
 file.reference.PP-tracker-app=app
 file.reference.PP-tracker-config=config
 file.reference.PP-tracker-test=test
 files.encoding=UTF-8
 site.root.folder=${file.reference.PP-tracker-app}
-test.folder=${file.reference.PP-tracker-test}
+test.folder=
